# deep.learning

./: .gitignore  README.md
basic/: CMakeLists.txt  DeepLearningBasic.cpp  Neuron.h  README.md
breakout/: AIPlayer.cpp  AIPlayer.h  Breakout.cpp  Breakout.h  CMakeLists.txt  ConvDQNGameMain.cpp  README.md
cnn/: CMakeLists.txt  ConvolutionalNeuralNetwork.cpp  README.md
core/: ActivationFunctions.cpp  ActivationFunctions.h  Array1D.h  CMakeLists.txt  Common.h  ConnectionBase.h  ConnectionFactory.h  ConvChannel2D.h  ConvConnection2D.cpp  ConvConnection2D.h  ConvFilter2D.h  ConvImage2D.h  Convolution2D.cpp  Convolution2D.h  FullConnection.cpp  FullConnection.h  LayerBase.cpp  LayerBase.h  Matrix.cpp  Matrix.h  NeuralNetwork.cpp  NeuralNetwork.h  README.md  RLMemory.h  ReinforcementLearning.cpp  ReinforcementLearning.h  VectorND.h
core/unused/: ConvFilter1D.h  Vector2D.h
fcnn/: CMakeLists.txt  FullyConnectedNeuralNetwork.cpp  README.md
selfdrivingcar/: Agent.cpp  Agent.h  CMakeLists.txt  README.md  SquareObj.h  TestDrivingScene.cpp  TestDrivingScene.h
